# svgtail

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
